horizontal scrollbar fixed

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -24,6 +24,11 @@ a {
         color: var(--body-text-color);
     }
 }
+
+::selection { 
+  background-color: #ffdb4d;
+}
+
 body::-webkit-scrollbar {
 	width: 8px;               
 }
@@ -33,6 +38,11 @@ background-color: grey;
 border-radius: 20px;       
 }
 
-::selection { 
-  background-color: #ffdb4d;
+.horizontal-scrollbar::-webkit-scrollbar {
+    height: 8px;
+}
+
+.horizontal-scrollbar::-webkit-scrollbar-thumb {
+    background-color: grey;
+    border-radius: 20px;
 }
